--- a/index.html
+++ b/index.html
@@ -5,25 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" >
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/7.3.2/css/flag-icons.min.css" integrity="sha512-+WVTaUIzUw5LFzqIqXOT3JVAc5SrMuvHm230I9QAZa6s+QRk8NDPswbHo2miIZj3yiFyV9lAgzO1wVrjdoO4tw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav class="navbar">
-        <a href ="#"><img src="image/logo[2].jpg"></a>
+        <a href ="#"><img class="logo" src="image/logo[2].jpg"></a>
         <ul class="navbar 1">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>                
+            <i class="fa-solid fa-image"></i>
+            <li class="nav"><a href="#home">Home</a></li>
+            <li class="nav"><a href="#about">About</a></li>
+            <li class="nav"><a href="#Project">Project</a></li>
+            <li class="nav"><a href="#Contact">Contact</a></li>                
         </ul>
     </nav>
+    <section class="home"; id="home">
     <div class="main">
         <div class="main-content">
-            <h1>WELCOME TO OUR WEBSITE</h1>
-            <p>Our website is a platform where you can get all the information about the latest technology and gadgets. We provide you with the latest news and updates about the technology world. You can also find reviews and comparisons of different gadgets on our website. So, if you are a tech enthusiast, then this is the perfect place for you.</p>
-            <button>Read More</button>
+            <h1><center>Hi I Am <span>Ankit</span></center></h1>
+            <p class="">I am a Graphic Designer,An ambitious and eager to learn Graphic Designer who is ready to advance my skills and make my mark in the industry. I want to achieve success in the field of graphic designing by using my creativity and skills.</p>
         </div>
         <div class="main-image">
-            <img src="">
+            <img src="image.jpg" alt="Ankit Image" width="auto" height="450px">
         </div>
     </div>
+    </section>
+    <section class="about"; id="about">
+        <div class="Education-content">
+            <h2>Education</h2>
+            <ul type="circle">
+                <li class="edu">Pursuing B.COM.(Bachelor Of Commerce) From MEERUT UNIVERSITY </li>
+                <li class="edu">Pursuing MULTIMEDIA Course From I.W.P Academy</li>
+                <li class="edu">12th From B.O.S.S.E. BOARD</li>
+                <li class="edu">10th From C.B.S.E. BOARD</li>
+            </ul>            
+            <h2>Skills</h2>
+            <ul type="square">
+                <li class="edu">Adobe Photoshop</li>
+                <li class="edu">Adobe Illustrator</li>
+                <li class="edu">HTML&CSS</li>
+                <li class="edu">Ms Power Point</li>
+                <li class="edu">Ms Excel</li>
+                <li class="edu">Ms Word</li>
+        </div>    
+    </section> 
+    <section class="Project"; id="Project">
+        <div class="Project-content"></div>
+    </section>
+    <section class="Contact"; id="Contact">
+        <div class="Contact-content">
+            <h2>Contact</h2>
+            <i class="fa-solid fa-phone"></i>
+                9599742205
+                <br>
+                <a href="mailto:ankit.rajvanshi2301@gmail.com">ankit.rajvanshi2301@gmail.com</a>
+                <br>                            
+                <a href="https://g.co/kgs/KJnvohZ">
+                K-3/202
+                <br>
+                Mohan Garden
+                <br>
+                Uttam Nager
+                <br>
+                New Delhi-110059
+                </a>
+        </div>
+    </section>
+    <marquee behavior="alternate" scrollamount="10">A.R Graphic Designer</marquee>
+   <center><img src="https://capsule-render.vercel.app/api?type=waving&color=black&height=60&section=footer&width=100"/></center>
 </body>
 </html>
