--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href ="#"><img class="logo" src="image/logo[2].jpg"></a>
-        <ul class="navbar 1">
-            <i class="fa-solid fa-image"></i>
+        <!--<a href ="#"><img class="logo" src="image/logo[2].jpg"></a>-->
+        <ul class="navbar 1">            
             <li class="nav"><a href="#home">Home</a></li>
             <li class="nav"><a href="#about">About</a></li>
             <li class="nav"><a href="#Project">Project</a></li>
@@ -22,7 +21,7 @@
     <div class="main">
         <div class="main-content">
             <h1><center>Hi I Am <span>Ankit</span></center></h1>
-            <p class="">I am a Graphic Designer,An ambitious and eager to learn Graphic Designer who is ready to advance my skills and make my mark in the industry. I want to achieve success in the field of graphic designing by using my creativity and skills.</p>
+            <p>I am a Graphic Designer,An ambitious and eager to learn Graphic Designer who is ready to advance my skills and make my mark in the industry. I want to achieve success in the field of graphic designing by using my creativity and skills.</p>
         </div>
         <div class="main-image">
             <img src="image.jpg" alt="Ankit Image" width="auto" height="450px">
@@ -40,23 +39,47 @@
             </ul>            
             <h2>Skills</h2>
             <ul type="square">
-                <li class="edu">Adobe Photoshop</li>
-                <li class="edu">Adobe Illustrator</li>
-                <li class="edu">HTML&CSS</li>
-                <li class="edu">Ms Power Point</li>
-                <li class="edu">Ms Excel</li>
-                <li class="edu">Ms Word</li>
+                <li class="edu">Adobe Photoshop</li> <span><meter min="0" max="100" value="85"></meter></span>
+                <li class="edu">Adobe Illustrator</li> <span><meter min="0" max="100" value="90"></meter></span>
+                <li class="edu">HTML&CSS</li> <span><meter min="0" max="100" value="40"></meter></span>
+                <li class="edu">Ms Power Point</li> <span><meter min="0" max="100" value="70"></meter></span>
+                <li class="edu">Ms Excel</li> <span><meter min="0" max="100" value="75"></meter></span>
+                <li class="edu">Ms Word</li> <span><meter min="0" max="100" value="79"></meter></span>
+            </ul>                 
         </div>    
     </section> 
     <section class="Project"; id="Project">
-        <div class="Project-content"></div>
+        <h3><center><b>Project Work</b></center></h3>
+        <div class="Project-content">            
+            <div class="Illustrator">
+                <h4>Illustrator Work</h4>
+                <ul type="circle">
+                    <li>Logo Design</li>
+                    <li>Digital Art</li>
+                    <li>Digital Vector</li>
+                    <li>Stoce Art</li>
+                    <li>Art Work</li>
+                </ul>
+            </div>
+            <div class="Photoshop">
+                <h4>Photoshop Work</h4>
+                <ul type="circle">
+                    <li>Graphic Design</li>                  
+                    <li>Manipulation</li>
+                    <li>Poster</li>
+                    <li>Fir Effect</li>
+                    <li>Low Poly</li>
+                </ul>
+            </div>          
+        </div>        
     </section>
     <section class="Contact"; id="Contact">
         <div class="Contact-content">
-            <h2>Contact</h2>
+            <h5>Contact:</h5>
             <i class="fa-solid fa-phone"></i>
                 9599742205
                 <br>
+                <i class="fa-solid fa-envelope"></i>
                 <a href="mailto:ankit.rajvanshi2301@gmail.com">ankit.rajvanshi2301@gmail.com</a>
                 <br>                            
                 <a href="https://g.co/kgs/KJnvohZ">
