--- a/Portfolio.html
+++ b/Portfolio.html
@@ -66,7 +66,17 @@
         <div class="Project-content">
             <div class="Illustrator">
                 <h4>Illustrator Work</h4>
-                <div>                 
+                <div>
+                    <img src="/projects/1 Digital Illustaur.jpg"width "auto" height="400px">
+                    <div>
+                        Digital Illustaur
+                    </div> 
+                    <div>
+                        <img src="/projects/Digital Vector.jpg"width "auto" height="400px">
+                        <div>
+                            Digital Vector
+                        </div>
+                    </div>                
                 </div>
             </div>
             <div class="Photoshop">
