--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
         </div>
     </section>
     <marquee behavior="alternate" scrollamount="10">A.R Graphic Designer</marquee>
-   <center><img src="https://capsule-render.vercel.app/api?type=waving&color=black&height=60&section=footer&width=100"/></center>
+   <!-- <center><img src="https://capsule-render.vercel.app/api?type=waving&color=black&height=60&section=footer&width=100"/></center> -->
 </body>
 </html>
